#188 fixes height issue on mobile

--- a/public/theme.css
+++ b/public/theme.css
@@ -16,11 +16,11 @@ html {
 .background-image{
     background-image: url("/img/mountain-background.jpg");
     background-repeat: no-repeat;
-    position: fixed;
-    -webkit-background-size: 200% auto;
-    -moz-background-size: 200% auto;
-    -o-background-size: 200% auto;
-    background-size: 200% auto;
+    overflow-y: scroll;
+}
+
+.main-background-overlay {
+    overflow-y: scroll;
 }
 
 a, button {
